yamls/python/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-dep
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: python-dep
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: python-dep
    spec:
      containers:
      - name: python
        image: takuyayone/test-python:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          protocol: TCP  
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
