yamls/python/python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-dep
  namespace: default
  labels:
    app: python-dep
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: python-dep
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: python-dep
    spec:
      containers:
      - name: python
        image: takuyayone/test-python:0.0.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          protocol: TCP  
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: default
  labels:
    app: python-service
spec:
  # clusterIP: 10.106.181.152
  # clusterIPs:
  # - 10.106.181.152
  # externalTrafficPolicy: Cluster
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: python-dep
  sessionAffinity: None
