yamls/python/python-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
spec:
  rules:
    - host: local-ingress.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 30081
